# design-patterns

./: CMakeLists.txt  README.md
AbstractFactory/: CMakeLists.txt  classes.h  factory.h  main.cpp
Adapter/: CMakeLists.txt  classes.h  main.cpp
Bridge/: CMakeLists.txt  classes.h  main.cpp
Builder/: CMakeLists.txt  builder.h  classes.h  main.cpp
Chain/: CMakeLists.txt  Header.h  main.cpp
Command/: AppLogic.h  CMakeLists.txt  Command.h  GUI.h  main.cpp
Composite/: CMakeLists.txt  classes.h  main.cpp
Decorator/: CMakeLists.txt  classes.h  main.cpp
Factory/: CMakeLists.txt  main.cpp  shapeClasses.h  shapeFactory.h
Flyweight/: CMakeLists.txt  classes.h  main.cpp
Iterator/: CMakeLists.txt  iterator.h  main.cpp  tree.h
Mediator/: CMakeLists.txt  Header.h  main.cpp
Memento/: CMakeLists.txt  Header.h  main.cpp
Observer/: CMakeLists.txt  listeners.h  main.cpp  manager.h
Prototype/: CMakeLists.txt  classes.h  main.cpp
Proxy/: CMakeLists.txt  Header.h  main.cpp
Singleton/: CMakeLists.txt  classes.h  main.cpp
State/: CMakeLists.txt  Header.h  main.cpp
Strategy/: CMakeLists.txt  classes.h  main.cpp  strategies.h
TemplateMethod/: CMakeLists.txt  classes.h  main.cpp
Visitor/: CMakeLists.txt  main.cpp  shapes.cpp  shapes.h
