cmake_minimum_required(VERSION 3.10)
add_subdirectory(AbstractFactory)
add_subdirectory(Adapter)
add_subdirectory(Bridge)
add_subdirectory(Builder)
add_subdirectory(Chain)
add_subdirectory(Command)
add_subdirectory(Composite)
add_subdirectory(Decorator)
add_subdirectory(Factory)
add_subdirectory(Flyweight)
add_subdirectory(Iterator)
add_subdirectory(Mediator)
add_subdirectory(Memento)
add_subdirectory(Observer)
add_subdirectory(Prototype)
add_subdirectory(Proxy)
add_subdirectory(Singleton)
add_subdirectory(State)
add_subdirectory(Strategy)
add_subdirectory(TemplateMethod)
add_subdirectory(Visitor)